<resources>
    <string name="app_name">MoneyWallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="navigation_drawer_open" translatable="false">open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">close navigation drawer</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="parentheses">()</string>
    <string name="divide">÷</string>
    <string name="multiply">*</string>
    <string name="plus">+</string>
    <string name="subtract">-</string>
    <string name="equal">=</string>
    <string name="plusMinus">+/-</string>
    <string name="point">.</string>

    <string name="backspace"> </string>
    <string name="display">Enter a value </string>

    <string-array name="number">
        <item>None</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>One time</item>

    </string-array>
    <string-array name="amount">
        <item>None</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>One time</item>

    </string-array>


    <string-array name="currency">
        <item>PKR</item>
        <item>USD</item>
        <!--        <item>Week</item>-->
        <!--        <item>Month</item>-->
        <!--        <item>Year</item>-->
        <!--        <item>One time</item>-->

    </string-array>

    <string-array name="categories">
        <item>Food &amp; Drinks</item>
        <item>Shopping</item>
        <item>Housing</item>
        <item>Transportation</item>
        <item>Vehicle</item>
        <item>Life &amp; Entertainment</item>
        <item>Communication</item>
        <item>Financial Expenses</item>
        <item>Investments</item>
        <item>Other</item>
    </string-array>

    <string-array name="account">
        <item>Cash</item>
    </string-array>

    <string-array name="gander">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="lent">
        <item>Cash</item>
    </string-array>




</resources>